Created input section box with error messages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 <app-header></app-header>
 <mat-grid-list cols="1" style = "padding-left: 10%; padding-right: 10%">
   <app-textbox></app-textbox>
+  <app-inputcontainer></app-inputcontainer>
+  <app-submitbutton></app-submitbutton>
 
 </mat-grid-list>
 
