Added autosizing to letter area.

--- a/src/app/components/inputcontainer/inputcontainer.component.html
+++ b/src/app/components/inputcontainer/inputcontainer.component.html
@@ -29,6 +29,6 @@
 
 
   <mat-form-field style="width: 100%">
-    <textarea matInput>{{letterText}}</textarea>
+    <textarea matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize">{{letterText}}</textarea>
   </mat-form-field>
 </div>
