--- a/src/app/components/inputcontainer/inputcontainer.component.html
+++ b/src/app/components/inputcontainer/inputcontainer.component.html
@@ -28,7 +28,7 @@
   <div style="width: 100%">
     <h4>Representatives</h4>
     <div id = "#repConatiner" style = "width: 100%"></div>
-    <mat-radio-button matInput [formControl]="radioButtons" *ngFor="let member of members" [value]="selected">
+    <mat-radio-button matInput ngDefaultControl [formControl]="radioButtons" *ngFor="let member of members" [value]="selected">
       {{member}}
     </mat-radio-button>
 
