Changed button size to width:100%

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <app-header></app-header>
-<mat-grid-list cols="1" style = "padding-left: 10%; padding-right: 10%">
+<mat-grid-list cols="1" style = "padding-left: 10%; padding-right: 10%; display: flex; justify-content: center">
   <app-textbox></app-textbox>
   <app-inputcontainer></app-inputcontainer>
   <app-submitbutton></app-submitbutton>
