--- a/src/app/components/submitbutton/submitbutton.component.html
+++ b/src/app/components/submitbutton/submitbutton.component.html
@@ -1,1 +1,1 @@
-<button mat-raised-button (click)="onClick()">Submit</button>
+<button mat-raised-button (click)="onClick()" style = "width: 100%">Submit</button>
