--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
 <div style = "width: 100%; display: flex; justify-content: left; background-color: green">
-  <img style = "width: 20%; height:auto" src = "assets/bcedaccess_logo-copy.png">
+  <img style = "width: 20vmin; height:auto" src = "assets/bcedaccess_logo-copy.png">
 </div>
