Finished Candidate Setup

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,6 @@
 <div style = "width: 100%; display: flex; justify-content: left; background-color: green">
-  <img style = "width: 20vmin; height:auto" src = "assets/bcedaccess_logo-copy.png">
+  <div style="width: 25%; padding: 20px; margin-left: 9%">
+    <h1 style="color: white; font-size: xx-large; line-height: 30px ">Education Assistant Standards of Practice Working Group</h1>
+  </div>
+
 </div>
