--- a/src/app/components/submitbutton/submitbutton.component.html
+++ b/src/app/components/submitbutton/submitbutton.component.html
@@ -1,1 +1,1 @@
-<button mat-raised-button (click)="onClick($event)" style = "width: 100%" *ngIf="!event">Send to your MLA Candidate</button>
+<button mat-raised-button (click)="onClick($event)" style = "width: 100%" *ngIf="!event">Send to your MLA</button>
