Changed some colours around

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
-<div style = "width: 100%; display: flex; justify-content: left; background-color: green">
+<div style = "width: 100%; display: flex; justify-content: center; background-color: #445f3f  ">
   <div style="width: 25%; padding: 20px; margin-left: 9%">
-    <h1 style="color: white; font-size: xx-large; line-height: 30px ">Education Assistant Standards of Practice Working Group</h1>
+    <img src="assets/bcedaccess_logo-copy.png" alt="Logo" style="width: 75%; height: auto">
   </div>
 
 </div>
