--- a/src/app/components/inputcontainer/inputcontainer.component.html
+++ b/src/app/components/inputcontainer/inputcontainer.component.html
@@ -44,6 +44,6 @@
 
 
   <mat-form-field style="width: 100%">
-    <textarea [formControl]="letter" type="html" matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" [innerHTML]="letterText"></textarea>
+    <textarea [formControl]="letter" type="html" matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" [innerHTML]="letterText" style = "background-color: #FFFFFF;"></textarea>
   </mat-form-field>
 </div>
